samples/_failures_safe/1761247844_33a305_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b987a654.c: In function ‘main’:
./samples/SAFE/__tmp_b987a654.c:153:41: error: expected ‘)’ at end of input
  153 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_b987a654.c:153:21: error: too few arguments to function ‘print_matrix’
  153 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_b987a654.c:59:6: note: declared here
   59 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_b987a654.c:153:21: error: expected declaration or statement at end of input
  153 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_b987a654.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b987a654.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b987a654.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b987a654.c:153:21: error: expected declaration or statement at end of input
